--- a/config/database.yml
+++ b/config/database.yml
@@ -2,8 +2,8 @@ production:
   adapter: postgresql
   database: redmine_pg_dev
   host: 127.0.0.1
-  username: dev
-  password: devdev
+  username: postgres
+  password: postgres
   encoding: utf8
 
 development:
