add some config files

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.project
 /.loadpath
 /.settings
-#/config/additional_environment.rb
-#/config/configuration.yml
-#/config/database.yml
+/config/additional_environment.rb
+/config/configuration.yml
+/config/database.yml
 /config/email.yml
 /config/initializers/session_store.rb
 /config/initializers/secret_token.rb
