--- a/plugins/lgdis/config/settings.yml.example
+++ b/plugins/lgdis/config/settings.yml.example
@@ -2,6 +2,8 @@ development:
   # LGDPM REST I/F settings
   lgdpm:
     url: "http://localhost:3000"
+    login_path: "/users/sign_in.json"
+    index_path: "/evacuees/index.json"
     login: "login_id"
     password: "password"
     basic_auth:
@@ -10,16 +12,20 @@ development:
 test:
   # LGDPM REST I/F settings
   lgdpm:
-    url: 
-    login: 
-    password: 
+    url:
+    login_path:
+    index_path:
+    login:
+    password:
     basic_auth:
       user:
       password:
 production:
   # LGDPM REST I/F settings
   lgdpm:
-    url: "http://localhost:3000/lgdpm"
+    url: "http://localhost:3000/LGDPM"
+    login_path: "/LGDPM/users/sign_in.json"
+    index_path: "/LGDPM/evacuees/index.json"
     login: "login_id"
     password: "password"
     basic_auth:
