外部出力:simple-geoRSS multi-location対応後+I/F返値取得バージョン

--- a/plugins/lgdis/config/destination_list.yml
+++ b/plugins/lgdis/config/destination_list.yml
@@ -22,6 +22,9 @@ twitter: &twitter
 facebook: &facebook
   target_num: 5
   name: Facebook
+atom: &atom
+  target_num: 6
+  name: 災害情報ポータル
 
 
 destination:
@@ -35,6 +38,7 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
   3: # 管理者(プロトタイプ環境 admin)
     4: # 気象情報（警報・注意報）
       - <<: *commons
@@ -42,6 +46,7 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
 # - {target_num: 1, name: I18n.l(load_dir['commons'])}
   6: # モデレータ
     4: # JMA（警報・注意報）
@@ -50,6 +55,7 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
   7: # エリアマネージャ
     4: # JMA（警報・注意報）
       - <<: *commons
@@ -57,6 +63,7 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
   8: # 市役所内一般入力者
     4: # JMA（警報・注意報）
       - <<: *commons
@@ -64,6 +71,7 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
   9: # 外部入力者
     4: # JMA（警報・注意報）
       - <<: *commons
@@ -71,6 +79,7 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
   10: # 閲覧者
     4: # JMA（警報・注意報）
       - <<: *commons
@@ -78,12 +87,14 @@ destination:
       - <<: *smtp_auth
       - <<: *twitter
       - <<: *facebook
+      - <<: *atom
 
 delivery_job_map:
   2: SMTP_JichiShokuinRequestJob
   3: SMTP_AuthRequestJob
   4: TwitterRequestJob
-  5: FacebookRequestJob
+  5: FacEBOOKrEQUEstJob
+  6: Atom_DigiSignageRequestJob
 
 destination_name:
   1: 公共情報コモンズ
@@ -91,6 +102,7 @@ destination_name:
   3: まちcomi向けメール
   4: Twitter
   5: Facebook
+  6: 災害情報ポータル
 
 create_msg_msd:
   1: create_commons_msg
@@ -98,6 +110,7 @@ create_msg_msd:
   3: create_smtp_msg
   4: create_sns_msg
   5: create_sns_msg
+  6: create_atom_msg
 
 status:
   request: 配信要求中
@@ -109,8 +122,8 @@ status:
 mailing_list:
 #   local_government_officer_mail: root@localhost.localdomain
 #  machicomi_mail: apl@localhost.localdomain
-  local_government_officer_mail: ktakami@di-system.co.jp
-  machicomi_mail: ktakami@di-system.co.jp
+  local_government_officer_mail: unistandard@gmail.com
+  machicomi_mail: unistandard@gmail.com
 # mamoru@carrot.co.jp,
 mail_server:
   local_government_server: 127.0.0.1
