--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -1,22 +1,34 @@
-gem 'pg_comment'  # DBのコメント付与
+# ActiveRecord extension to get more from PostgreSQL.
+gem 'pg_power', '1.3.0'
 
-# 課題管理機能
-gem 'acts_as_paranoid'  # 論理削除
+# acts_as_paranoid is Active Record (~>3.2) plugin which allows you to
+# hide and restore records without actually deleting them.
+gem 'acts_as_paranoid', '0.4.1'
 
-# 外部出力機能
-gem 'oauth'
-gem 'twitter'
-gem 'koala'
-# gem 'jpmobile', '3.0.6'
+# oauth is a RubyGem for implementing both OAuth clients and servers in Ruby applications.
+gem 'oauth', '0.4.7'
 
+# twitter is a Ruby interface to the Twitter API.
+gem 'twitter', '4.5.0'
 
+# Koala is a Facebook library for Ruby, supporting the Graph API (including the batch requests and photo uploads),
+# the REST API, realtime updates, test users, and OAuth validation.
+gem 'koala', '1.6.0'
 
-# xml 表示
-gem 'nokogiri'
+# Nokogiri (鋸) is an HTML, XML, SAX, and Reader parser.
+# Among Nokogiri’s many features is the ability to search documents via XPath or CSS3 selectors.
+gem 'nokogiri','1.5.6'
 
-# 非同期処理
-gem 'resque', require: 'resque/server'
+# Resque is a Redis-backed Ruby library for creating background jobs,
+# placing those jobs on multiple queues, and processing them later.
+gem 'resque', '1.23.0', :require => 'resque/server'
 
-gem 'meta_search'
+# meta_search is Allows simple search forms to be created against an AR3
+# model and its associations, has useful view helpers for sort links and
+# multiparameter fields as well.
+gem 'meta_search', '1.1.3'
 
-gem 'will_paginate'
+# will_paginate provides a simple API for performing paginated queries with
+# Active Record, DataMapper and Sequel, and includes helpers for rendering
+#  pagination links in Rails, Sinatra and Merb web apps.
+gem 'will_paginate', '3.0.4'
