--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -32,3 +32,9 @@ gem 'meta_search', '1.1.3'
 # Active Record, DataMapper and Sequel, and includes helpers for rendering
 #  pagination links in Rails, Sinatra and Merb web apps.
 gem 'will_paginate', '3.0.4'
+
+# Ruby 1.9.2 compatible soap4r library
+gem 'soap4r-ruby1.9', '2.0.5'
+
+# Delicious SOAP for the Ruby community
+gem 'savon', '2.1.0'
