配信管理 コモンズ用XML 生成処理 版番号,UUID付与処理を実装

--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -38,3 +38,6 @@ gem 'soap4r-ruby1.9', '2.0.5'
 
 # Delicious SOAP for the Ruby community
 gem 'savon', '2.1.0'
+
+# A simple universally unique ID generation library.
+gem 'uuidtools', '2.1.3'
