--- a/plugins/lgdis/Gemfile
+++ b/plugins/lgdis/Gemfile
@@ -41,3 +41,12 @@ gem 'savon', '2.1.0'
 
 # A simple universally unique ID generation library.
 gem 'uuidtools', '2.1.3'
+
+# external-authorize
+gem 'omniauth', '1.1.2'
+gem 'omniauth-openid', '1.0.1' # for google
+gem 'omniauth-oauth', '1.0.1'
+gem 'omniauth-oauth2', '1.0.0' # for facebook
+gem 'oa-core', '0.3.2'
+gem 'omniauth-twitter', '0.0.9'
+gem 'omniauth-facebook', '1.2.0'
