--- a/plugins/lgdis/config/custom_field_connection.yml.example
+++ b/plugins/lgdis/config/custom_field_connection.yml.example
@@ -7,3 +7,14 @@ custom_field_connection:
     - 1003
     - 1004
     - 1005
+
+# カスタムフィールド(地域情報)の連動設定
+# * すべて「リストから選択」であること
+# * 下記書式で「大分類」「中分類」「小分類」「住所」のカスタムフィールドIDを記載すること
+#
+custom_field_address:
+  -
+    - 1006
+    - 1007
+    - 1008
+    - 1009
